# morph-markdown

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.github/workflows/: ios-sdk.yml
demo/: morph_md_kitty_demo.c  streaming_math.md
demo/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
demo/android/app/: build.gradle.kts
demo/android/app/src/main/: AndroidManifest.xml
demo/android/app/src/main/assets/fonts/: README.md
demo/android/app/src/main/cpp/: CMakeLists.txt  markdown_render_demo_jni.c
demo/android/app/src/main/java/com/morph/markdown/demo/: MainActivity.kt  MarkdownFixtures.kt  MarkdownNative.kt  MarkdownRenderConfig.kt  StreamingSimulator.kt
demo/android/app/src/main/res/values/: colors.xml  styles.xml
demo/ios/: README.md
demo/ios/MorphMarkdownDemo/: ContentView.swift  DemoMarkdownDocument.swift  DemoMarkdownEngine.swift  MorphMarkdownDemoApp.swift
demo/ios/MorphMarkdownDemo.xcodeproj/: project.pbxproj
demo/ios/MorphMarkdownDemo/MorphMarkdownDemo/: AppDelegate.swift  DemoImageWriter.swift  DemoViewController.swift  Info.plist  MarkdownFixtures.swift  StreamingSimulator.swift
demo/ios/MorphMarkdownDemo/MorphMarkdownDemo.xcodeproj/: project.pbxproj
include/: morph_markdown.h  morph_markdown_kitty.h  morph_markdown_stream.h
scripts/: prepare-third-party.sh
sdk/android/morph-markdown/: build.gradle.kts
sdk/android/morph-markdown/scripts/: meson-android-cross-template.ini  prepare-android-deps.sh
sdk/android/morph-markdown/src/main/cpp/: CMakeLists.txt  markdown_render_jni.c
sdk/android/morph-markdown/src/main/java/com/morph/markdown/: InlineLayout.kt  InlineLineBreaker.kt  InlineTextFragmenter.kt  LinkTextView.kt  ListIndentPolicy.kt  ListMarkerView.kt  MarkdownNative.kt  MarkdownTableScrollView.kt  MarkdownTableView.kt  MarkdownUi.kt  MorphImageLoader.kt  MorphMarkdownEngine.kt  MorphMarkdownLinkHandler.kt  MorphMarkdownOptions.kt  MorphMarkdownRenderer.kt  MorphMarkdownTheme.kt  MorphMarkdownView.kt  MorphMathRenderer.kt  RenderDebounceState.kt  TableColumnSizer.kt  TableIntrinsicMeasurer.kt  TaskMarkerView.kt  TextBreakRules.kt
sdk/android/morph-markdown/src/test/java/com/morph/markdown/: InlineLineBreakerTest.kt  InlineTextFragmenterTest.kt  ListIndentPolicyTest.kt  RenderDebounceStateTest.kt  TableColumnSizerTest.kt
sdk/ios/MorphMarkdown/: Package.release.swift.template  Package.swift  README.md
sdk/ios/MorphMarkdown/Sources/MorphMarkdown/: Algorithms.swift  BlockNodeView.swift  InlineAttributedTextView.swift  InlineLayoutView.swift  InlineNodeView.swift  LayoutAlgorithms.swift  ListNodeView.swift  MarkdownIR.swift  MarkdownTableView.swift  MarkerViews.swift  MathAndImages.swift  MorphMarkdownConfiguration.swift  MorphMarkdownEngine.swift  MorphMarkdownLinkHandler.swift  MorphMarkdownNode.swift  MorphMarkdownPlugins.swift  MorphMarkdownRenderer.swift  MorphMarkdownRendererBlocks.swift  MorphMarkdownRendererInline.swift  MorphMarkdownRendererTable.swift  MorphMarkdownTheme.swift  MorphMarkdownUIView.swift  MorphMarkdownView.swift  RenderDebounceState.swift  SwiftUIView.swift  TableNodeView.swift  UIKitSupport.swift
sdk/ios/MorphMarkdown/Sources/MorphMarkdownNative/: MorphMarkdownNative.c
sdk/ios/MorphMarkdown/Sources/MorphMarkdownNative/include/: MorphMarkdownNative.h
sdk/ios/MorphMarkdown/Tests/MorphMarkdownTests/: AgentUILinkRenderingTests.swift  InlineLineBreakerTests.swift  InlineTextFragmenterTests.swift  ListIndentPolicyTests.swift  MathRendererColorTests.swift  NativeEngineTests.swift  ProgressiveRendererTests.swift  RenderDebounceStateTests.swift  RendererPerformanceTests.swift  TableColumnSizerTests.swift
sdk/ios/MorphMarkdown/scripts/: build-native-ios.sh  check-function-lines.py  meson-ios-cross-template.ini  prepare-release-package.sh
src/: md_math_ext.c  md_math_ext.h  md_stream.c
src/base/: md_array.c  md_array.h  md_buf.c  md_buf.h  md_error.h  md_hash.c  md_hash.h  md_strmap.c  md_strmap.h  md_utf8.c  md_utf8.h  md_width.c  md_width.h
src/terminal/: md_kitty.c
tests/: test_md_engine.c  test_md_stream.c
